# nest-fortune-ai-api

./: .gitignore  README.md  makefile  package.json
ai-service/: .gitignore  pyproject.toml
ai-service/src/: main.py
ai-service/src/model/: model.py
backend/: eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
backend/ai_service/: ai_service.proto
backend/prisma/: schema.prisma
backend/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  main.ts
backend/src/ai-service/: ai-service.controller.spec.ts  ai-service.controller.ts  ai-service.service.ts
backend/src/categories/: categories.controller.ts
backend/src/categories/dto/: create-category.dto.ts
backend/src/fortune/: fortune.module.ts
prisma/: dev.db  schema.prisma  seed.ts
prisma/migrations/20250517235914_init/: migration.sql
shared/grpc/: ai_service.proto
src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
src/categories/: categories.service.ts
src/fortune/: fortune.controller.ts  fortune.service.ts
